Fix white bar on mobile screen under header

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -151,7 +151,8 @@ aside {
 header {
     position: relative;
     width: 100%;
-    height: 100vh;
+    min-height: 100vh;
+    overflow: hidden;
     // @include background-cover;
     // background-position: center;
     // background-image: url('../img/header.jpg');
@@ -161,6 +162,7 @@ header {
     flex-direction: column; /* Stack items vertically */
     justify-content: center; /* Vertically center content */
     align-items: center; /* Horizontally center content */
+    background: transparent; /* Remove background */
 
     .canvas-container {
         position: absolute;
